# dvcs-action

./: .gitignore  LICENSE  README.md  action.yml  check_dvcs.py  pyproject.toml  requirements_test.txt  sonar-project.properties  test_check_dvcs.py
.github/.workflows/: linting.yml  unit_tests.yml
.github/workflows/: dvcs_check.yml  snar.yml  sonar.yml  unit_tests.yml
